--- a/mac/userChrome.css
+++ b/mac/userChrome.css
@@ -23,96 +23,144 @@ Quote: https://userChrome.org | https://github.com/topics/userchrome
 
 }
 
-* {
+
+.browser-toolbar:not(.titlebar-color) {
   background-color: transparent !important;
-  background-image: none !important;
+  color: var(--toolbar-color);
   -moz-appearance: -moz-mac-vibrancy-dark !important;
+  
+}
+
+#titlebar {
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
+}
+
+#navigator-toolbox {
+  appearance: none;
+  background-color: transparent;
+  border-top: none;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
 :root {
-    --navbarwidth: 500px !important; /*set width of navbar*/
-/*     background-color: rgba(255,255,255,0,2) !important; */
-    --toolbar-bgcolor: red; 
-    background-color: rgba(255,255,255,0.5) !important;
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
+  background-color: transparent !important;;
+  color: -moz-DialogText;
+  font: message-box;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-html#main-window body {
-  background-color: transparent !important;
+#TabsToolbar,
+#toolbar-menubar,
+#main-menubar,
+#titlebar:-moz-lwtheme {
+  appearance: none;
+  background-color: transparent;
+  color: inherit;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-/* mac-vibrant-titlebar+personaltoolbar */
-
-#PersonalToolbar {
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
-}
-
-/* /mac-vibrant-titlebar+personaltoolbar */
-
-/* mac-vibrant-titlebar+nav-bar */
-
-#nav-bar {
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
-}
-
-/* /mac-vibrant-titlebar+personaltoolbar */
-
-/* mac-vibrant-titlebar+selected-tab */
-
-.tab-background[selected="true"] {
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
-}
-
-/* /mac-vibrant-titlebar+selected-tab */
-
-/* tab bar background color */
 #browser {
-  background: rgba(0,0,0,0) !important;
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
+  background: transparent !important;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
-/* tab bar background color */
 
-/* side bar background  */
+.browser-sidebar2 {
+  background: transparent !important;
+  border: var(--toolbar-bgcolor) 0.1px solid;
+  border-bottom: solid 5px var(--toolbar-bgcolor);
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
+}
+
 #sidebar-select-box {
-  background-color: rgba(0,0,0,0) !important;
-  background-image: none !important;
-  -moz-appearance: -moz-mac-vibrancy-dark !important;
-}
-/* side bar background   */
-
-html#main-window body {
-    
-}
-
-#navigator-toolbox{ 
-    --toolbar-bgcolor: rgba(255,255,255,0.2) !important;
+  background-color: transparent !important;;
+  background-image: none !important;;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: center;
+  background-size: cover;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-    :root:not(:-moz-lwtheme) #navigator-toolbox,
-    :root[lwt-default-theme-in-dark-mode] #navigator-toolbox {
-      background-color:  rgba(0,0,0,0) !important;
-    }
-
-#nav-bar { 
-    --toolbar-bgcolor: rgba (255,255,255,1) !important;
+.sidebar-splitter {
+  appearance: none;
+  width: 6px;
+  background-color: transparent !important;;
+  border: 1px ThreeDShadow;
+  border-style: none solid;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-#urlbar-input {
-    width: 500px !important;
+#tabbrowser-tabbox[flex], #tabbrowser-tabpanels, browser[type="content-primary"], browser[type="content"] > html{
+  background: none !important;
+  background-color: transparent !important;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-#urlbar[breakout] {
-    max-width: 720px;
+#sidebar-box {
+  --sidebar-background-color: Field;
+  --sidebar-text-color: FieldText;
+  background-color: transparent !important;
+  color: var(--sidebar-text-color);
+  text-shadow: none;
+   -moz-default-appearance: menupopup !important;
+   appearance: auto !important;
+   background-color: transparent !important;
 }
 
-#urlbar-background {
-    display: none !important;
+#urlbar-background,
+#searchbar {
+  background-color: rgba(128,128,128,0.2) !important;
+  backdrop-filter: blur(20px);
+  background-clip: border-box;
+  border: 1px solid var(--toolbar-field-border-color);
+  border-radius: var(--toolbarbutton-border-radius);
+}
+
+hbox#urlbar box {
+   opacity: 0;
+   transition: opacity 0.3s ease-in-out;
+}
+
+hbox#urlbar:hover box {
+   opacity: 1;
+   transition: opacity 0.3s ease-in-out;
+}
+
+hbox#urlbar hbox#page-action-buttons {
+   opacity: 0;
+   transition: opacity 0.3s ease-in-out;   
+}
+
+hbox#urlbar:hover hbox#page-action-buttons {
+   opacity: 1;
+   transition: opacity 0.3s ease-in-out;   
 }
 
 
-/* ------------------------------------ */
-/* Firefox Translucent Tabbar for macOS */
-/* ------------------------------------ */
+#urlbar[breakout][breakout-extend] {
+   background-color: white !important;   
+}
+
+#nav-bar:is([downloadsbuttonshown], [unifiedextensionsbuttonshown]) #urlbar-container {
+/*    max-width: 500px; */
+}
 
 :root#main-window {
    background-color: transparent !important;
@@ -130,46 +178,4 @@ html#main-window body {
    -moz-default-appearance: menupopup !important;
    appearance: auto !important;
    background-color: transparent !important;
-}
-
-/* De-emphasize tab icons and names when window is unfocused */
-:root:-moz-window-inactive .tab-content {
-  opacity: 0.6;
-}
-
-/* recolor toolbar button hover/active bg colors to semi-transparent */
-:root {
-   --toolbarbutton-hover-background: color-mix(in srgb, currentColor 11%, transparent) !important;
-   --toolbarbutton-active-background: color-mix(in srgb, currentColor 21%, transparent) !important;
-}
-
-/* improve border visiblity for selected tabs */
-.tab-background:is([selected], [multiselected]):-moz-lwtheme {
-   border:  none !important;
-}
-#tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.1), 0 1px 5px rgba(0,0,0,.1) !important;
-}
-:root:-moz-window-inactive #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.05) !important;
-}
-
-@media (-moz-content-prefers-color-scheme: dark) {
-  :root #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-     box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) hsla(280,6%,60%,0.5) inset, 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.6), 0 1px 5px rgba(0,0,0,.1) !important;
-  }
-  :root:-moz-window-inactive #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-     box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.4) !important;
-  }
-}
-
-/* border between tab bar and navbar */
-:root #nav-bar {
-  box-shadow: 0 -1px 0 0 hsla(280,6%,0%,0.1), 0 -4px 4px -5px hsla(280,6%,0%,0.2);
-}
-
-@media (-moz-content-prefers-color-scheme: dark) {
-  :root #nav-bar {
-    box-shadow: 0 -1px 0 0 hsla(280,6%,0%,0.3), 0 -4px 4px -5px hsla(280,6%,0%,0.05) !important;
-  }
 }
