--- a/mac/userChrome.css
+++ b/mac/userChrome.css
@@ -225,9 +225,13 @@ browser {
   }
 
 /* hidden addressbar */
-#navigator-toolbox-background {
+/* #navigator-toolbox-background {
    position: absolute;
-}
+} */
+
+/* #navigator-toolbox {
+   position: absolute;
+} */
 
 #TabsToolbar {
    margin-top: 30px;
@@ -245,12 +249,26 @@ browser {
 } */
 
 
+/* ######## arc style ######### */
+
+#navigator-toolbox-background {
+   width: 100vw;
+   top: 0;
+   left: 0;
+   position: fixed;
+   z-index: 999;
+}
+
+#sidebar-select-box {
+   margin-top: 32px;
+}
+
 /* floating search bar */
 #urlbar-container {
-   position: absolute;
-   width: 100vw;
-   top: -32px;
-   left: 0;   
+   position: absolute !important;
+   width: 100vw !important;
+   top: -32px !important;
+   left: 0 !important;    
 }
 
 #urlbar[breakout][breakout-extend] {
@@ -327,4 +345,20 @@ arrowscrollbox > tab[pinned="true"]:nth-child(8) {
 
 arrowscrollbox > tab[pinned="true"]:nth-child(10) {
    top: 320px;
+}
+
+
+#navigator-toolbox-background {
+  grid-area: addressbar;
+}
+#browser {
+  grid-area: main;
+
+html#main-window body {
+  display: grid !important;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "addressbar main main main"
+    "main main main main";
 }
