--- a/userContent.css
+++ b/userContent.css
@@ -60,6 +60,11 @@ body,
 }
 
 /* synology DSM  */
+
+
+html.synohdpack.ext-strict > * {
+    font-family: PreludeWGL !important;
+}
 /* variables  */
 :root {
     --v-font-family-base: Verdana, Arial, sans-seri;
@@ -177,6 +182,17 @@ body,
     flex-direction: column;
     background-color: var(--v-window-bkg-color);
     backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);
+}
+
+.sds-window-v5 .x-window-header-text {
+  line-height: 20px;
+  font-size: 12px;
+  color: rgba(0,0,0,0.5) !important;
+  text-align: left;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
+  font-weight: 900 !important; 
 }
 
 /* folder view  */
@@ -577,288 +593,25 @@ body,
 
 /* widgets */
 
-.v-widget-window .v-window {
-    background: rgba(0, 0, 0, 0.2) !important;
+.v-widget-window.v-window {
+    background: rgba(0, 0, 0, 0.5) !important;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);
     transition:
         top ease-in 0.2s,
         left ease-in 0.2s;
 }
-.v-widget-window.v-window .v-widget-items-wrapper {
-    height: 100%;
-    padding-bottom: 10px;
-    box-sizing: border-box;
-}
-.v-widget-window .v-window.ghost {
-    transition: none;
-}
-.v-widget-window .v-window .v-ps {
-    padding-right: 0;
-}
-.v-widget-window .v-window .v-ps.show {
-    padding-right: 4px;
-}
-.v-widget-window .v-window .v-ps .ps__rail-y {
-    opacity: 1;
-}
-.v-widget-window .v-window .v-ps .ps__rail-y .ps__thumb-y {
-    right: 4px;
-    background-color: rgba(255, 255, 255, 0.3);
-}
-.v-widget-window.v-window .v-ps .ps__rail-y:hover .ps__thumb-y,
-.v-widget-window .v-window .v-ps .ps__rail-y:active .ps__thumb-y {
-    background-color: rgba(255, 255, 255, 0.7);
-}
-.v-widget-window .v-window .v-ps:hover .ps__rail-y {
-    opacity: initial;
-}
 
-/* widget items */
-.v-widget-item .v-widget-item-header {
-    font-weight: 700;
-}
 .v-widget-item-ghost {
     opacity: 0.65;
     background-color: rgba(0, 0, 0, 0) !important;
 }
-.v-widget-item-ghost
-    .v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools {
-    opacity: 1;
-}
-.v-widget-item-ghost .v-widget-item .v-widget-item-content {
-    opacity: 0;
-}
+
 .v-widget-item {
-    display: none;
-    box-sizing: border-box;
-    background: rgba(255, 255, 255, 0.9) !important;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: 1px solid rgba(40, 50, 60, 0.3);
-    border-radius: 3px;
-    padding-bottom: 4px;
-    height: 208px;
-    box-shadow: none;
-    overflow: hidden;
-    transition: height ease-in 0.2s;
+    background: rgba(255, 255, 255, 0.7) !important;
     backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);
 }
-.v-widget-item.active {
-    display: block;
-}
-.v-widget-item.active ~ .v-widget-item.active {
-    margin-top: 8px;
-}
-.v-widget-item.medium {
-    height: 122px;
-    padding-bottom: 2px;
-}
-.v-widget-item.mask {
-    border: 1px dashed rgba(255, 255, 255, 0.3);
-    background: rgba(0, 0, 0, 0);
-}
-.v-widget-item.mask .v-widget-item-header,
-.v-widget-item.mask .v-widget-item-content {
-    display: none;
-}
-.v-widget-item .v-widget-item-header {
-    cursor: move;
-    display: flex;
-    align-items: start;
-    height: 35px;
-    margin-left: 3px;
-    margin-right: 5px;
-    font-size: 12px;
-}
-.v-widget-item .v-widget-item-header:hover .v-widget-item-header-tools {
-    opacity: 1;
-}
-.v-widget-item .v-widget-item-header .v-widget-item-header-icon {
-    width: 32px;
-    height: 32px;
-    margin-top: 1px;
-    margin-bottom: 2px;
-    margin-right: 2px;
-    cursor: pointer;
-}
-.v-widget-item .v-widget-item-header .v-widget-item-header-title {
-    align-self: center;
-    font-size: 1em;
-    flex: 1;
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-title
-    .v-widget-item-header-title-text {
-    cursor: pointer;
-}
-.v-widget-item .v-widget-item-header .v-widget-item-header-tools {
-    justify-content: flex-end;
-    display: flex;
-    margin-top: 5px;
-    margin-bottom: 6px;
-    transition: opacity 0.2s;
-    opacity: 0;
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon {
-    cursor: pointer;
-    margin-left: 8px;
-    height: 24px;
-    width: 24px;
-    background-position: 0 0;
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon:hover {
-    background-position: 0px -24px;
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon:active {
-    background-position: 0px -48px;
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon.toolbar {
-    background-image: url(/webman/modules/Widgets/assets/4a32c2fb98b5c8f1a9d7.png);
-    background-size: 24px 72px;
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpack
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.toolbar {
-        background-image: url(/webman/modules/Widgets/assets/35f03202e25c22cb4e20.png);
-        background-size: 24px 72px;
-    }
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpackdebug
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.toolbar {
-        background-image: url(/webman/modules/Widgets/assets/35f03202e25c22cb4e20.png);
-        background-size: 24px 72px;
-        outline: 1px green dashed;
-    }
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon.minimize {
-    background-image: url(/webman/modules/Widgets/assets/f0349137564cce08a5d8.png);
-    background-size: 24px 72px;
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpack
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.minimize {
-        background-image: url(/webman/modules/Widgets/assets/52ff0ae087c6bfa8d73f.png);
-        background-size: 24px 72px;
-    }
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpackdebug
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.minimize {
-        background-image: url(/webman/modules/Widgets/assets/52ff0ae087c6bfa8d73f.png);
-        background-size: 24px 72px;
-        outline: 1px green dashed;
-    }
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon.maximize {
-    background-image: url(/webman/modules/Widgets/assets/17babddd7d5cb38e8dce.png);
-    background-size: 24px 72px;
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpack
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.maximize {
-        background-image: url(/webman/modules/Widgets/assets/547bff2d775bd81062da.png);
-        background-size: 24px 72px;
-    }
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpackdebug
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.maximize {
-        background-image: url(/webman/modules/Widgets/assets/547bff2d775bd81062da.png);
-        background-size: 24px 72px;
-        outline: 1px green dashed;
-    }
-}
-.v-widget-item
-    .v-widget-item-header
-    .v-widget-item-header-tools
-    .v-widget-item-header-tool-icon.close {
-    background-image: url(/webman/modules/Widgets/assets/1a699af34f3f7f770cb0.png);
-    background-size: 24px 72px;
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpack
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.close {
-        background-image: url(/webman/modules/Widgets/assets/a6f00a7a13f1e640f7a4.png);
-        background-size: 24px 72px;
-    }
-}
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (-o-min-device-pixel-ratio: 3/2),
-    (min-resolution: 144dpi) {
-    .synohdpackdebug
-        .v-widget-item
-        .v-widget-item-header
-        .v-widget-item-header-tools
-        .v-widget-item-header-tool-icon.close {
-        background-image: url(/webman/modules/Widgets/assets/a6f00a7a13f1e640f7a4.png);
-        background-size: 24px 72px;
-        outline: 1px green dashed;
-    }
-}
-.v-widget-item .v-widget-item-content .x-grid3 {
-    height: 100%;
-}
-.v-widget-item .v-widget-item-content .x-grid3-scroller {
-    overflow: initial;
-}
+
 
 /* taskbar */
 .taskbar-wrapper {
@@ -883,17 +636,63 @@ body,
     z-index: -1;
 }
 .taskbar-wrapper .taskbar-left-wrapper {
-    background-color: rgba(50, 60, 70, 0.9);
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);  
     box-shadow: 0px 1px 2px rgba(10, 20, 30, 0.5);
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-top-width: 0px;
     height: 38px;
     margin: 0 6px 0px 12px;
-    border-radius: 0px 0px 3px 3px;
+    border-radius: 16px !important;
     flex: 0 0 auto;
 }
 .taskbar-wrapper .taskbar-mask {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+.start-button .start-button-img {
+  background-image: url(./assets/4b9260c1210304d37107.png);
+  background-size: 24px 72px;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  background-color: rgba(0,0,0,0);
+  padding: 0;
+  border: none;
+  mix-blend-mode: screen;
+}
+
+/* app menu */
+.syno-sds-appview {
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);    
+}
+
+.search-field {
+  background: rgba(0, 0, 0, 0.5) !important;
+  border: 1px solid rgba(0, 0, 0, 0.5) !important;
+  border-radius: 16px !important;
+    backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);
+}
+
+/* ##################### login #################### */
+
+.tab-panel{
+    position:relative;
+    width:400px;
+    min-height:478px;
+    padding:0px 40px 22px 40px;
+    background: rgba(255,255,255,.8) !important;
+    box-shadow:0 10px 20px 0 rgba(0,0,0,.2);
+    box-sizing:border-box;
+    border-radius: 16px !important;
+    backdrop-filter: blur(20px) brightness(120%) contrast(1) saturate(2);
+}
+
+.login-textfield .input-container input {
+    border-radius: 32px;
+    padding-left: 16px !important;
 }
