--- a/windows/userChrome.css
+++ b/windows/userChrome.css
@@ -173,6 +173,122 @@ html#main-window body hbox#browser vbox#appcontent {
    overflow: hidden;
 }
 
+/* floorp corner radius option */
+.browserStack > * {
+    border: 0px solid var(--chrome-content-separator-color) !important;
+    border-radius: 8px !important;
+}
+vbox.browserContainer {
+   border-color: transparent !important;
+   border-bottom-width: 8px !important;;
+}
+
+/* ######## arc style ######### */
+
+/* windows only - aero buttons  */
+#nav-bar-customization-target {
+    justify-content: flex-end;
+}
+
+/* floating search bar */
+#urlbar-container {
+   position: absolute !important;
+   width: 100vw !important;
+   top: -32px !important;
+   left: 0 !important;    
+}
+
+#navigator-toolbox-background {
+   width: 100vw;
+   top: 0;
+   left: 0;
+   position: fixed;
+   z-index: 999;
+}
+
+/* floating search bar */
+#urlbar-container {
+   position: absolute !important;
+   width: 100vw !important;
+   top: -32px !important;
+   left: 0 !important;    
+}
+
+#urlbar[breakout][breakout-extend] {
+
+   background-color: rgba(255,255,255,.5) !important;   
+   max-width: 50%;
+   position: absolute;
+   margin-top: 25%;
+   margin-left: 25%;
+   backdrop-filter: blur(20px);
+   border-radius: 16px;
+}
+
+vbox.browserContainer {
+   margin-top: 8px;
+}
+
+#TabsToolbar {
+   margin-top: 30px;
+}
+
+#sidebar-select-box {
+   margin-top: 32px;
+}
+
+/* tabs */
+/* Target element by tag name and attribute */
+tab[pinned="true"] {
+   position: sticky;
+   z-index: 100;
+   border-radius: 8px !important;
+   background-color: rgba(255,255,255,1) !important;
+   backdrop-filter: blur(20px);
+}
+
+
+/* Apply margin based on counter value */
+arrowscrollbox > tab[pinned="true"]:nth-child(1) {
+   top: 0px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(2) {
+   top: 40px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(3) {
+   top: 80px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(4) {
+   top: 120px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(5) {
+   top: 160px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(6) {
+   top: 200px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(7) {
+   top: 240px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(8) {
+   top: 280px;
+}
+
+arrowscrollbox > tab[pinned="true"]:nth-child(10) {
+   top: 320px;
+}
+
+
+
+/* windows only - aero buttons based on resolutions */
+/* wavefox code */
 /* wavefox code */
 @media (-moz-windows-accent-color-in-titlebar: 0)
         {
