--- a/windows/userChrome.css
+++ b/windows/userChrome.css
@@ -49,7 +49,7 @@ Quote: https://userChrome.org | https://github.com/topics/userchrome
 } 
 
 :root {
-  background-color: rgba(255,255,255,.5) !important;;
+  background-color: transparent !important;;
   color: -moz-DialogText;
   font: message-box;
 }
@@ -185,12 +185,10 @@ vbox.browserContainer {
 
 /* ######## arc style ######### */
 
-/* windows only - aero buttons  */
 #nav-bar-customization-target {
     justify-content: flex-end;
 }
 
-/* floating search bar */
 #urlbar-container {
    position: absolute !important;
    width: 100vw !important;
@@ -206,7 +204,6 @@ vbox.browserContainer {
    z-index: 999;
 }
 
-/* floating search bar */
 #urlbar-container {
    position: absolute !important;
    width: 100vw !important;
